[fix] docs
