# docs/swagger.json
@@ -5,6 +5,48 @@
         "license": {}
     },
     "paths": {
+        "/index": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Get a externalapp products list",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Product"
+                ],
+                "summary": "Index products",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Select product by status 0- pending 1-accepted 2-rejected",
+                        "name": "status",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.ResProduct"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.DefaultError"
+                        }
+                    }
+                }
+            }
+        },
         "/reject": {
             "put": {
                 "security": [
@@ -19,9 +61,52 @@
                     "application/json"
                 ],
                 "tags": [
-                    "product"
+                    "Product"
                 ],
-                "summary": "Update product - denied",
+                "summary": "Update product - accpetd",
+                "parameters": [
+                    {
+                        "description": "Request body",
+                        "name": "Request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requests.ResProductResponse"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.DefaultSuccess"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.DefaultError"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "create a new request",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Product"
+                ],
+                "summary": "Create a product issue",
                 "parameters": [
                     {
                         "description": "Request body",
@@ -69,7 +154,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/requests.EntUsersStore"
+                            "$ref": "#/definitions/requests.EntSuperUserStore"
                         }
                     }
                 ],
@@ -152,12 +237,37 @@
                 }
             }
         },
-        "requests.EntUsersStore": {
+        "requests.EntExternalUserStore": {
             "type": "object",
             "required": [
+                "cnpj",
                 "email",
                 "password",
                 "razao_social"
+            ],
+            "properties": {
+                "cnpj": {
+                    "type": "string"
+                },
+                "confirm_password": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "razao_social": {
+                    "type": "string"
+                }
+            }
+        },
+        "requests.EntSuperUserStore": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
             ],
             "properties": {
                 "cnpj": {
